--- a/css/main_style.css
+++ b/css/main_style.css
@@ -6,16 +6,47 @@ Colorblind safe color palette from colorbrew2.org.
 #a6dba0 - light green
 #008837 - dark green
 */
-body{
-  background-color: #b2abd2;
-  color: #008837;
-  text-align: center;
+
+# header{
+  background-color: #008837;
 }
 
 h1{
-  color: #7b3294
+  color: #7b3294;
+  padding: 5px;
+  margin:0;
+  font-style: italic;
 }
 
-h3{
-  color: #7b3294
+#body-container{
+  background-color:#f7f7f7;
+  max-width: 1000px;
+  margin: auto;
+  height: 100vh;
+  border: 2px solid #f7f7f7;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+body{
+  background-color: #c2a5cf;
+  color: #008837;
+  text-align: center;
+  margin: 0;
+}
+
+#profile-picture{
+  float: left;
+}
+
+#welcom-text{
+  padding-top:25px;
+  font-size: 25px;
+}
+
+# research-interests{
+  text-align: left;
+  font-size: 25px;
+  position: relative;
+  left: 100px;
 }
