--- a/css/main_style.css
+++ b/css/main_style.css
@@ -41,12 +41,19 @@ body{
 
 #welcom-text{
   padding-top:25px;
-  font-size: 25px;
+  font-size: 38px;
+}
+
+ul,li {
+  text-align: center;
+  list-style-position: inside;
 }
 
 # research-interests{
+  top:20px;
   text-align: left;
   font-size: 25px;
   position: relative;
-  left: 100px;
+  left: 200px;
+  margin: 20px;
 }
