--- a/css/main_style.css
+++ b/css/main_style.css
@@ -8,14 +8,13 @@ Colorblind safe color palette from colorbrew2.org.
 */
 
 # header{
-  background-color: #008837;
+  background-color: #a6dba0;
 }
 
 h1{
   color: #7b3294;
   padding: 5px;
   margin:0;
-  font-style: italic;
 }
 
 #body-container{
@@ -32,7 +31,6 @@ body{
   background-color: #c2a5cf;
   color: #008837;
   text-align: center;
-  margin: 0;
 }
 
 #profile-picture{
@@ -44,10 +42,6 @@ body{
   font-size: 38px;
 }
 
-ul,li {
-  text-align: center;
-  list-style-position: inside;
-}
 
 # research-interests{
   top:20px;
