--- a/css/main_style.css
+++ b/css/main_style.css
@@ -51,3 +51,10 @@ body{
   left: 200px;
   margin: 20px;
 }
+
+#copyright {
+  position: absolute;
+  width: 1000px;
+  text-align: center;
+  bottom: 20px;
+}
